New folder/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> line
Rule 1     line -> Input line
Rule 2     line -> EXIT empty
Rule 3     Input -> Declaration
Rule 4     Input -> Expression
Rule 5     Input -> If_Statement
Rule 6     Input -> While_Loop
Rule 7     Input -> For_Loop
Rule 8     Input -> Do_While_Loop
Rule 9     Input -> Print_Console
Rule 10    Declaration -> DeclarationTypeNumber IDENTIFIER_ALL ;
Rule 11    Declaration -> DeclarationTypeNumber ARRAY_MULTI_ASSIGN ;
Rule 12    Declaration -> STRING IDENTIFIER ;
Rule 13    Declaration -> STRING STRING_ASSIGN ;
Rule 14    DeclarationTypeNumber -> INT
Rule 15    DeclarationTypeNumber -> INT16
Rule 16    IDENTIFIER_ASSIGN -> IDENTIFIER = OperationConstant
Rule 17    STRING_ASSIGN -> IDENTIFIER = DQ_MSG
Rule 18    IDENTIFIER_ARRAY -> IDENTIFIER [ ARRAY_SIZE ]
Rule 19    ARRAY_MULTI_ASSIGN -> IDENTIFIER [ ] = { MULTI_ASSIGN }
Rule 20    MULTI_ASSIGN -> CONSTANT , MULTI_ASSIGN
Rule 21    MULTI_ASSIGN -> CONSTANT empty
Rule 22    ARRAY_SIZE -> IDENTIFIER
Rule 23    ARRAY_SIZE -> OperationConstant
Rule 24    OperationConstant -> OperationStatement
Rule 25    OperationConstant -> OperationStatementInBracket
Rule 26    OperationConstant -> MinusVariable
Rule 27    OperationConstant -> CONSTANT_ALL
Rule 28    OperationConstant -> IDENTIFIER_ID
Rule 29    OperationStatementInBracket -> ( OperationStatement )
Rule 30    OperationStatement -> OperationConstant Operator OperationConstant
Rule 31    MinusVariable -> OperationVarDeclare OperationConstant
Rule 32    IDENTIFIER_ALL -> IDENTIFIER_ASSIGN
Rule 33    IDENTIFIER_ALL -> IDENTIFIER_ARRAY
Rule 34    IDENTIFIER_ALL -> IDENTIFIER
Rule 35    IDENTIFIER_ID -> IDENTIFIER_ARRAY
Rule 36    IDENTIFIER_ID -> IDENTIFIER
Rule 37    CONSTANT_ALL -> CONSTANT
Rule 38    CONSTANT_ALL -> IDENTIFIER
Rule 39    CONSTANT -> CONSTANT10
Rule 40    CONSTANT -> CONSTANT16
Rule 41    INC_DEC_OPRERATOR -> INC_OP
Rule 42    INC_DEC_OPRERATOR -> DEC_OP
Rule 43    OperationVarDeclare -> +
Rule 44    OperationVarDeclare -> -
Rule 45    Operator -> +
Rule 46    Operator -> -
Rule 47    Operator -> *
Rule 48    Operator -> /
Rule 49    Operator -> %
Rule 50    Expression -> IDENTIFIER_ID = OperationConstant ;
Rule 51    Expression -> IDENTIFIER_ID = DQ_MSG ;
Rule 52    Expression -> ARRAY_MULTI_ASSIGN empty ;
Rule 53    Expression -> IDENTIFIER_ID INC_DEC_OPRERATOR ;
Rule 54    Expression -> INC_DEC_OPRERATOR IDENTIFIER_ID ;
Rule 55    If_Statement -> IF ( Compare_Expreession ) { statements } Elif_Else
Rule 56    Elif_Statement -> ELIF ( Compare_Expreession ) { statements } Elif_Else
Rule 57    Else_Statement -> ELSE { statements }
Rule 58    statements -> empty empty
Rule 59    statements -> Declaration statements
Rule 60    statements -> Expression statements
Rule 61    statements -> If_Statement statements
Rule 62    statements -> While_Loop statements
Rule 63    statements -> For_Loop statements
Rule 64    statements -> Do_While_Loop statements
Rule 65    statements -> Print_Console statements
Rule 66    Elif_Else -> empty
Rule 67    Elif_Else -> Elif_Statement
Rule 68    Elif_Else -> Else_Statement
Rule 69    Compare_Expreession -> OperationConstant Compare_Operator OperationConstant
Rule 70    Compare_Operator -> L_OP
Rule 71    Compare_Operator -> G_OP
Rule 72    Compare_Operator -> LE_OP
Rule 73    Compare_Operator -> GE_OP
Rule 74    Compare_Operator -> EQ_OP
Rule 75    Compare_Operator -> NE_OP
Rule 76    While_Loop -> WHILE ( Compare_Expreession ) { statements }
Rule 77    For_Loop -> FOR ( DeclarationTypeNumber IDENTIFIER = OperationConstant ; Compare_Expreession ; IDENTIFIER_ALL_ASSIGN ) { statements }
Rule 78    For_Loop -> FOR ( DeclarationTypeNumber IDENTIFIER = OperationConstant ; Compare_Expreession ; For_Loop_Crement ) { statements }
Rule 79    For_Loop -> FOR ( IDENTIFIER = OperationConstant ; Compare_Expreession ; IDENTIFIER_ALL_ASSIGN ) { statements }
Rule 80    For_Loop -> FOR ( IDENTIFIER = OperationConstant ; Compare_Expreession ; For_Loop_Crement ) { statements }
Rule 81    IDENTIFIER_ALL_ASSIGN -> IDENTIFIER_ID = OperationConstant
Rule 82    For_Loop_Crement -> IDENTIFIER INC_DEC_OPRERATOR
Rule 83    For_Loop_Crement -> INC_DEC_OPRERATOR IDENTIFIER
Rule 84    Do_While_Loop -> DO { statements } WHILE ( Compare_Expreession ) ;
Rule 85    Print_Console -> PRINT_AL ( DQ_MSG ) ;
Rule 86    Print_Console -> PRINT_AL ( DQ_MSG Print_Value ) ;
Rule 87    Print_Console -> PRINT_LN ( ) empty empty ;
Rule 88    PRINT_AL -> PRINT
Rule 89    PRINT_AL -> PRINT_LN
Rule 90    Print_Value -> empty empty empty
Rule 91    Print_Value -> , IDENTIFIER_ALL Print_Value
Rule 92    Print_Value -> , CONSTANT Print_Value
Rule 93    Print_Value -> , DQ_MSG Print_Value
Rule 94    empty -> <empty>
Rule 95    EXIT -> <empty>

Terminals, with rules where they appear

%                    : 49
(                    : 29 55 56 76 77 78 79 80 84 85 86 87
)                    : 29 55 56 76 77 78 79 80 84 85 86 87
*                    : 47
+                    : 43 45
,                    : 20 91 92 93
-                    : 44 46
/                    : 48
;                    : 10 11 12 13 50 51 52 53 54 77 77 78 78 79 79 80 80 84 85 86 87
=                    : 16 17 19 50 51 77 78 79 80 81
CONSTANT10           : 39
CONSTANT16           : 40
DEC_OP               : 42
DO                   : 84
DQ_MSG               : 17 51 85 86 93
ELIF                 : 56
ELSE                 : 57
EQ_OP                : 74
FOR                  : 77 78 79 80
GE_OP                : 73
G_OP                 : 71
IDENTIFIER           : 12 16 17 18 19 22 34 36 38 77 78 79 80 82 83
IF                   : 55
INC_OP               : 41
INT                  : 14
INT16                : 15
LE_OP                : 72
L_OP                 : 70
NE_OP                : 75
PRINT                : 88
PRINT_LN             : 87 89
STRING               : 12 13
WHILE                : 76 84
[                    : 18 19
]                    : 18 19
error                : 
{                    : 19 55 56 57 76 77 78 79 80 84
}                    : 19 55 56 57 76 77 78 79 80 84

Nonterminals, with rules where they appear

ARRAY_MULTI_ASSIGN   : 11 52
ARRAY_SIZE           : 18
CONSTANT             : 20 21 37 92
CONSTANT_ALL         : 27
Compare_Expreession  : 55 56 76 77 78 79 80 84
Compare_Operator     : 69
Declaration          : 3 59
DeclarationTypeNumber : 10 11 77 78
Do_While_Loop        : 8 64
EXIT                 : 2
Elif_Else            : 55 56
Elif_Statement       : 67
Else_Statement       : 68
Expression           : 4 60
For_Loop             : 7 63
For_Loop_Crement     : 78 80
IDENTIFIER_ALL       : 10 91
IDENTIFIER_ALL_ASSIGN : 77 79
IDENTIFIER_ARRAY     : 33 35
IDENTIFIER_ASSIGN    : 32
IDENTIFIER_ID        : 28 50 51 53 54 81
INC_DEC_OPRERATOR    : 53 54 82 83
If_Statement         : 5 61
Input                : 1
MULTI_ASSIGN         : 19 20
MinusVariable        : 26
OperationConstant    : 16 23 30 30 31 50 69 69 77 78 79 80 81
OperationStatement   : 24 29
OperationStatementInBracket : 25
OperationVarDeclare  : 31
Operator             : 30
PRINT_AL             : 85 86
Print_Console        : 9 65
Print_Value          : 86 91 92 93
STRING_ASSIGN        : 13
While_Loop           : 6 62
empty                : 2 21 52 58 58 66 87 87 90 90 90
line                 : 1 0
statements           : 55 56 57 59 60 61 62 63 64 65 76 77 78 79 80 84

Parsing method: LALR

state 0

    (0) S' -> . line
    (1) line -> . Input line
    (2) line -> . EXIT empty
    (3) Input -> . Declaration
    (4) Input -> . Expression
    (5) Input -> . If_Statement
    (6) Input -> . While_Loop
    (7) Input -> . For_Loop
    (8) Input -> . Do_While_Loop
    (9) Input -> . Print_Console
    (95) EXIT -> .
    (10) Declaration -> . DeclarationTypeNumber IDENTIFIER_ALL ;
    (11) Declaration -> . DeclarationTypeNumber ARRAY_MULTI_ASSIGN ;
    (12) Declaration -> . STRING IDENTIFIER ;
    (13) Declaration -> . STRING STRING_ASSIGN ;
    (50) Expression -> . IDENTIFIER_ID = OperationConstant ;
    (51) Expression -> . IDENTIFIER_ID = DQ_MSG ;
    (52) Expression -> . ARRAY_MULTI_ASSIGN empty ;
    (53) Expression -> . IDENTIFIER_ID INC_DEC_OPRERATOR ;
    (54) Expression -> . INC_DEC_OPRERATOR IDENTIFIER_ID ;
    (55) If_Statement -> . IF ( Compare_Expreession ) { statements } Elif_Else
    (76) While_Loop -> . WHILE ( Compare_Expreession ) { statements }
    (77) For_Loop -> . FOR ( DeclarationTypeNumber IDENTIFIER = OperationConstant ; Compare_Expreession ; IDENTIFIER_ALL_ASSIGN ) { statements }
    (78) For_Loop -> . FOR ( DeclarationTypeNumber IDENTIFIER = OperationConstant ; Compare_Expreession ; For_Loop_Crement ) { statements }
    (79) For_Loop -> . FOR ( IDENTIFIER = OperationConstant ; Compare_Expreession ; IDENTIFIER_ALL_ASSIGN ) { statements }
    (80) For_Loop -> . FOR ( IDENTIFIER = OperationConstant ; Compare_Expreession ; For_Loop_Crement ) { statements }
    (84) Do_While_Loop -> . DO { statements } WHILE ( Compare_Expreession ) ;
    (85) Print_Console -> . PRINT_AL ( DQ_MSG ) ;
    (86) Print_Console -> . PRINT_AL ( DQ_MSG Print_Value ) ;
    (87) Print_Console -> . PRINT_LN ( ) empty empty ;
    (14) DeclarationTypeNumber -> . INT
    (15) DeclarationTypeNumber -> . INT16
    (35) IDENTIFIER_ID -> . IDENTIFIER_ARRAY
    (36) IDENTIFIER_ID -> . IDENTIFIER
    (19) ARRAY_MULTI_ASSIGN -> . IDENTIFIER [ ] = { MULTI_ASSIGN }
    (41) INC_DEC_OPRERATOR -> . INC_OP
    (42) INC_DEC_OPRERATOR -> . DEC_OP
    (88) PRINT_AL -> . PRINT
    (89) PRINT_AL -> . PRINT_LN
    (18) IDENTIFIER_ARRAY -> . IDENTIFIER [ ARRAY_SIZE ]

    $end            reduce using rule 95 (EXIT -> .)
    STRING          shift and go to state 13
    IF              shift and go to state 17
    WHILE           shift and go to state 18
    FOR             shift and go to state 19
    DO              shift and go to state 20
    PRINT_LN        shift and go to state 22
    INT             shift and go to state 23
    INT16           shift and go to state 24
    IDENTIFIER      shift and go to state 14
    INC_OP          shift and go to state 26
    DEC_OP          shift and go to state 27
    PRINT           shift and go to state 28

    line                           shift and go to state 1
    Input                          shift and go to state 2
    EXIT                           shift and go to state 3
    Declaration                    shift and go to state 4
    Expression                     shift and go to state 5
    If_Statement                   shift and go to state 6
    While_Loop                     shift and go to state 7
    For_Loop                       shift and go to state 8
    Do_While_Loop                  shift and go to state 9
    Print_Console                  shift and go to state 10
    DeclarationTypeNumber          shift and go to state 11
    ARRAY_MULTI_ASSIGN             shift and go to state 12
    IDENTIFIER_ID                  shift and go to state 15
    INC_DEC_OPRERATOR              shift and go to state 16
    PRINT_AL                       shift and go to state 21
    IDENTIFIER_ARRAY               shift and go to state 25

state 1

    (0) S' -> line .



state 2

    (1) line -> Input . line
    (1) line -> . Input line
    (2) line -> . EXIT empty
    (3) Input -> . Declaration
    (4) Input -> . Expression
    (5) Input -> . If_Statement
    (6) Input -> . While_Loop
    (7) Input -> . For_Loop
    (8) Input -> . Do_While_Loop
    (9) Input -> . Print_Console
    (95) EXIT -> .
    (10) Declaration -> . DeclarationTypeNumber IDENTIFIER_ALL ;
    (11) Declaration -> . DeclarationTypeNumber ARRAY_MULTI_ASSIGN ;
    (12) Declaration -> . STRING IDENTIFIER ;
    (13) Declaration -> . STRING STRING_ASSIGN ;
    (50) Expression -> . IDENTIFIER_ID = OperationConstant ;
    (51) Expression -> . IDENTIFIER_ID = DQ_MSG ;
    (52) Expression -> . ARRAY_MULTI_ASSIGN empty ;
    (53) Expression -> . IDENTIFIER_ID INC_DEC_OPRERATOR ;
    (54) Expression -> . INC_DEC_OPRERATOR IDENTIFIER_ID ;
    (55) If_Statement -> . IF ( Compare_Expreession ) { statements } Elif_Else
    (76) While_Loop -> . WHILE ( Compare_Expreession ) { statements }
    (77) For_Loop -> . FOR ( DeclarationTypeNumber IDENTIFIER = OperationConstant ; Compare_Expreession ; IDENTIFIER_ALL_ASSIGN ) { statements }
    (78) For_Loop -> . FOR ( DeclarationTypeNumber IDENTIFIER = OperationConstant ; Compare_Expreession ; For_Loop_Crement ) { statements }
    (79) For_Loop -> . FOR ( IDENTIFIER = OperationConstant ; Compare_Expreession ; IDENTIFIER_ALL_ASSIGN ) { statements }
    (80) For_Loop -> . FOR ( IDENTIFIER = OperationConstant ; Compare_Expreession ; For_Loop_Crement ) { statements }
    (84) Do_While_Loop -> . DO { statements } WHILE ( Compare_Expreession ) ;
    (85) Print_Console -> . PRINT_AL ( DQ_MSG ) ;
    (86) Print_Console -> . PRINT_AL ( DQ_MSG Print_Value ) ;
    (87) Print_Console -> . PRINT_LN ( ) empty empty ;
    (14) DeclarationTypeNumber -> . INT
    (15) DeclarationTypeNumber -> . INT16
    (35) IDENTIFIER_ID -> . IDENTIFIER_ARRAY
    (36) IDENTIFIER_ID -> . IDENTIFIER
    (19) ARRAY_MULTI_ASSIGN -> . IDENTIFIER [ ] = { MULTI_ASSIGN }
    (41) INC_DEC_OPRERATOR -> . INC_OP
    (42) INC_DEC_OPRERATOR -> . DEC_OP
    (88) PRINT_AL -> . PRINT
    (89) PRINT_AL -> . PRINT_LN
    (18) IDENTIFIER_ARRAY -> . IDENTIFIER [ ARRAY_SIZE ]

    $end            reduce using rule 95 (EXIT -> .)
    STRING          shift and go to state 13
    IF              shift and go to state 17
    WHILE           shift and go to state 18
    FOR             shift and go to state 19
    DO              shift and go to state 20
    PRINT_LN        shift and go to state 22
    INT             shift and go to state 23
    INT16           shift and go to state 24
    IDENTIFIER      shift and go to state 14
    INC_OP          shift and go to state 26
    DEC_OP          shift and go to state 27
    PRINT           shift and go to state 28

    Input                          shift and go to state 2
    line                           shift and go to state 29
    EXIT                           shift and go to state 3
    Declaration                    shift and go to state 4
    Expression                     shift and go to state 5
    If_Statement                   shift and go to state 6
    While_Loop                     shift and go to state 7
    For_Loop                       shift and go to state 8
    Do_While_Loop                  shift and go to state 9
    Print_Console                  shift and go to state 10
    DeclarationTypeNumber          shift and go to state 11
    ARRAY_MULTI_ASSIGN             shift and go to state 12
    IDENTIFIER_ID                  shift and go to state 15
    INC_DEC_OPRERATOR              shift and go to state 16
    PRINT_AL                       shift and go to state 21
    IDENTIFIER_ARRAY               shift and go to state 25

state 3

    (2) line -> EXIT . empty
    (94) empty -> .

    $end            reduce using rule 94 (empty -> .)

    empty                          shift and go to state 30

state 4

    (3) Input -> Declaration .

    STRING          reduce using rule 3 (Input -> Declaration .)
    IF              reduce using rule 3 (Input -> Declaration .)
    WHILE           reduce using rule 3 (Input -> Declaration .)
    FOR             reduce using rule 3 (Input -> Declaration .)
    DO              reduce using rule 3 (Input -> Declaration .)
    PRINT_LN        reduce using rule 3 (Input -> Declaration .)
    INT             reduce using rule 3 (Input -> Declaration .)
    INT16           reduce using rule 3 (Input -> Declaration .)
    IDENTIFIER      reduce using rule 3 (Input -> Declaration .)
    INC_OP          reduce using rule 3 (Input -> Declaration .)
    DEC_OP          reduce using rule 3 (Input -> Declaration .)
    PRINT           reduce using rule 3 (Input -> Declaration .)
    $end            reduce using rule 3 (Input -> Declaration .)


state 5

    (4) Input -> Expression .

    STRING          reduce using rule 4 (Input -> Expression .)
    IF              reduce using rule 4 (Input -> Expression .)
    WHILE           reduce using rule 4 (Input -> Expression .)
    FOR             reduce using rule 4 (Input -> Expression .)
    DO              reduce using rule 4 (Input -> Expression .)
    PRINT_LN        reduce using rule 4 (Input -> Expression .)
    INT             reduce using rule 4 (Input -> Expression .)
    INT16           reduce using rule 4 (Input -> Expression .)
    IDENTIFIER      reduce using rule 4 (Input -> Expression .)
    INC_OP          reduce using rule 4 (Input -> Expression .)
    DEC_OP          reduce using rule 4 (Input -> Expression .)
    PRINT           reduce using rule 4 (Input -> Expression .)
    $end            reduce using rule 4 (Input -> Expression .)


state 6

    (5) Input -> If_Statement .

    STRING          reduce using rule 5 (Input -> If_Statement .)
    IF              reduce using rule 5 (Input -> If_Statement .)
    WHILE           reduce using rule 5 (Input -> If_Statement .)
    FOR             reduce using rule 5 (Input -> If_Statement .)
    DO              reduce using rule 5 (Input -> If_Statement .)
    PRINT_LN        reduce using rule 5 (Input -> If_Statement .)
    INT             reduce using rule 5 (Input -> If_Statement .)
    INT16           reduce using rule 5 (Input -> If_Statement .)
    IDENTIFIER      reduce using rule 5 (Input -> If_Statement .)
    INC_OP          reduce using rule 5 (Input -> If_Statement .)
    DEC_OP          reduce using rule 5 (Input -> If_Statement .)
    PRINT           reduce using rule 5 (Input -> If_Statement .)
    $end            reduce using rule 5 (Input -> If_Statement .)


state 7

    (6) Input -> While_Loop .

    STRING          reduce using rule 6 (Input -> While_Loop .)
    IF              reduce using rule 6 (Input -> While_Loop .)
    WHILE           reduce using rule 6 (Input -> While_Loop .)
    FOR             reduce using rule 6 (Input -> While_Loop .)
    DO              reduce using rule 6 (Input -> While_Loop .)
    PRINT_LN        reduce using rule 6 (Input -> While_Loop .)
    INT             reduce using rule 6 (Input -> While_Loop .)
    INT16           reduce using rule 6 (Input -> While_Loop .)
    IDENTIFIER      reduce using rule 6 (Input -> While_Loop .)
    INC_OP          reduce using rule 6 (Input -> While_Loop .)
    DEC_OP          reduce using rule 6 (Input -> While_Loop .)
    PRINT           reduce using rule 6 (Input -> While_Loop .)
    $end            reduce using rule 6 (Input -> While_Loop .)


state 8

    (7) Input -> For_Loop .

    STRING          reduce using rule 7 (Input -> For_Loop .)
    IF              reduce using rule 7 (Input -> For_Loop .)
    WHILE           reduce using rule 7 (Input -> For_Loop .)
    FOR             reduce using rule 7 (Input -> For_Loop .)
    DO              reduce using rule 7 (Input -> For_Loop .)
    PRINT_LN        reduce using rule 7 (Input -> For_Loop .)
    INT             reduce using rule 7 (Input -> For_Loop .)
    INT16           reduce using rule 7 (Input -> For_Loop .)
    IDENTIFIER      reduce using rule 7 (Input -> For_Loop .)
    INC_OP          reduce using rule 7 (Input -> For_Loop .)
    DEC_OP          reduce using rule 7 (Input -> For_Loop .)
    PRINT           reduce using rule 7 (Input -> For_Loop .)
    $end            reduce using rule 7 (Input -> For_Loop .)


state 9

    (8) Input -> Do_While_Loop .

    STRING          reduce using rule 8 (Input -> Do_While_Loop .)
    IF              reduce using rule 8 (Input -> Do_While_Loop .)
    WHILE           reduce using rule 8 (Input -> Do_While_Loop .)
    FOR             reduce using rule 8 (Input -> Do_While_Loop .)
    DO              reduce using rule 8 (Input -> Do_While_Loop .)
    PRINT_LN        reduce using rule 8 (Input -> Do_While_Loop .)
    INT             reduce using rule 8 (Input -> Do_While_Loop .)
    INT16           reduce using rule 8 (Input -> Do_While_Loop .)
    IDENTIFIER      reduce using rule 8 (Input -> Do_While_Loop .)
    INC_OP          reduce using rule 8 (Input -> Do_While_Loop .)
    DEC_OP          reduce using rule 8 (Input -> Do_While_Loop .)
    PRINT           reduce using rule 8 (Input -> Do_While_Loop .)
    $end            reduce using rule 8 (Input -> Do_While_Loop .)


state 10

    (9) Input -> Print_Console .

    STRING          reduce using rule 9 (Input -> Print_Console .)
    IF              reduce using rule 9 (Input -> Print_Console .)
    WHILE           reduce using rule 9 (Input -> Print_Console .)
    FOR             reduce using rule 9 (Input -> Print_Console .)
    DO              reduce using rule 9 (Input -> Print_Console .)
    PRINT_LN        reduce using rule 9 (Input -> Print_Console .)
    INT             reduce using rule 9 (Input -> Print_Console .)
    INT16           reduce using rule 9 (Input -> Print_Console .)
    IDENTIFIER      reduce using rule 9 (Input -> Print_Console .)
    INC_OP          reduce using rule 9 (Input -> Print_Console .)
    DEC_OP          reduce using rule 9 (Input -> Print_Console .)
    PRINT           reduce using rule 9 (Input -> Print_Console .)
    $end            reduce using rule 9 (Input -> Print_Console .)


state 11

    (10) Declaration -> DeclarationTypeNumber . IDENTIFIER_ALL ;
    (11) Declaration -> DeclarationTypeNumber . ARRAY_MULTI_ASSIGN ;
    (32) IDENTIFIER_ALL -> . IDENTIFIER_ASSIGN
    (33) IDENTIFIER_ALL -> . IDENTIFIER_ARRAY
    (34) IDENTIFIER_ALL -> . IDENTIFIER
    (19) ARRAY_MULTI_ASSIGN -> . IDENTIFIER [ ] = { MULTI_ASSIGN }
    (16) IDENTIFIER_ASSIGN -> . IDENTIFIER = OperationConstant
    (18) IDENTIFIER_ARRAY -> . IDENTIFIER [ ARRAY_SIZE ]

    IDENTIFIER      shift and go to state 35

    IDENTIFIER_ALL                 shift and go to state 31
    ARRAY_MULTI_ASSIGN             shift and go to state 32
    IDENTIFIER_ASSIGN              shift and go to state 33
    IDENTIFIER_ARRAY               shift and go to state 34

state 12

    (52) Expression -> ARRAY_MULTI_ASSIGN . empty ;
    (94) empty -> .

    ;               reduce using rule 94 (empty -> .)

    empty                          shift and go to state 36

state 13

    (12) Declaration -> STRING . IDENTIFIER ;
    (13) Declaration -> STRING . STRING_ASSIGN ;
    (17) STRING_ASSIGN -> . IDENTIFIER = DQ_MSG

    IDENTIFIER      shift and go to state 37

    STRING_ASSIGN                  shift and go to state 38

state 14

    (36) IDENTIFIER_ID -> IDENTIFIER .
    (19) ARRAY_MULTI_ASSIGN -> IDENTIFIER . [ ] = { MULTI_ASSIGN }
    (18) IDENTIFIER_ARRAY -> IDENTIFIER . [ ARRAY_SIZE ]

    =               reduce using rule 36 (IDENTIFIER_ID -> IDENTIFIER .)
    INC_OP          reduce using rule 36 (IDENTIFIER_ID -> IDENTIFIER .)
    DEC_OP          reduce using rule 36 (IDENTIFIER_ID -> IDENTIFIER .)
    [               shift and go to state 39


state 15

    (50) Expression -> IDENTIFIER_ID . = OperationConstant ;
    (51) Expression -> IDENTIFIER_ID . = DQ_MSG ;
    (53) Expression -> IDENTIFIER_ID . INC_DEC_OPRERATOR ;
    (41) INC_DEC_OPRERATOR -> . INC_OP
    (42) INC_DEC_OPRERATOR -> . DEC_OP

    =               shift and go to state 40
    INC_OP          shift and go to state 26
    DEC_OP          shift and go to state 27

    INC_DEC_OPRERATOR              shift and go to state 41

state 16

    (54) Expression -> INC_DEC_OPRERATOR . IDENTIFIER_ID ;
    (35) IDENTIFIER_ID -> . IDENTIFIER_ARRAY
    (36) IDENTIFIER_ID -> . IDENTIFIER
    (18) IDENTIFIER_ARRAY -> . IDENTIFIER [ ARRAY_SIZE ]

    IDENTIFIER      shift and go to state 43

    IDENTIFIER_ID                  shift and go to state 42
    IDENTIFIER_ARRAY               shift and go to state 25

state 17

    (55) If_Statement -> IF . ( Compare_Expreession ) { statements } Elif_Else

    (               shift and go to state 44


state 18

    (76) While_Loop -> WHILE . ( Compare_Expreession ) { statements }

    (               shift and go to state 45


state 19

    (77) For_Loop -> FOR . ( DeclarationTypeNumber IDENTIFIER = OperationConstant ; Compare_Expreession ; IDENTIFIER_ALL_ASSIGN ) { statements }
    (78) For_Loop -> FOR . ( DeclarationTypeNumber IDENTIFIER = OperationConstant ; Compare_Expreession ; For_Loop_Crement ) { statements }
    (79) For_Loop -> FOR . ( IDENTIFIER = OperationConstant ; Compare_Expreession ; IDENTIFIER_ALL_ASSIGN ) { statements }
    (80) For_Loop -> FOR . ( IDENTIFIER = OperationConstant ; Compare_Expreession ; For_Loop_Crement ) { statements }

    (               shift and go to state 46


state 20

    (84) Do_While_Loop -> DO . { statements } WHILE ( Compare_Expreession ) ;

    {               shift and go to state 47


state 21

    (85) Print_Console -> PRINT_AL . ( DQ_MSG ) ;
    (86) Print_Console -> PRINT_AL . ( DQ_MSG Print_Value ) ;

    (               shift and go to state 48


state 22

    (87) Print_Console -> PRINT_LN . ( ) empty empty ;
    (89) PRINT_AL -> PRINT_LN .

  ! shift/reduce conflict for ( resolved as shift
    (               shift and go to state 49

  ! (               [ reduce using rule 89 (PRINT_AL -> PRINT_LN .) ]


state 23

    (14) DeclarationTypeNumber -> INT .

    IDENTIFIER      reduce using rule 14 (DeclarationTypeNumber -> INT .)


state 24

    (15) DeclarationTypeNumber -> INT16 .

    IDENTIFIER      reduce using rule 15 (DeclarationTypeNumber -> INT16 .)


state 25

    (35) IDENTIFIER_ID -> IDENTIFIER_ARRAY .

    =               reduce using rule 35 (IDENTIFIER_ID -> IDENTIFIER_ARRAY .)
    INC_OP          reduce using rule 35 (IDENTIFIER_ID -> IDENTIFIER_ARRAY .)
    DEC_OP          reduce using rule 35 (IDENTIFIER_ID -> IDENTIFIER_ARRAY .)
    ;               reduce using rule 35 (IDENTIFIER_ID -> IDENTIFIER_ARRAY .)
    +               reduce using rule 35 (IDENTIFIER_ID -> IDENTIFIER_ARRAY .)
    -               reduce using rule 35 (IDENTIFIER_ID -> IDENTIFIER_ARRAY .)
    *               reduce using rule 35 (IDENTIFIER_ID -> IDENTIFIER_ARRAY .)
    /               reduce using rule 35 (IDENTIFIER_ID -> IDENTIFIER_ARRAY .)
    %               reduce using rule 35 (IDENTIFIER_ID -> IDENTIFIER_ARRAY .)
    ]               reduce using rule 35 (IDENTIFIER_ID -> IDENTIFIER_ARRAY .)
    L_OP            reduce using rule 35 (IDENTIFIER_ID -> IDENTIFIER_ARRAY .)
    G_OP            reduce using rule 35 (IDENTIFIER_ID -> IDENTIFIER_ARRAY .)
    LE_OP           reduce using rule 35 (IDENTIFIER_ID -> IDENTIFIER_ARRAY .)
    GE_OP           reduce using rule 35 (IDENTIFIER_ID -> IDENTIFIER_ARRAY .)
    EQ_OP           reduce using rule 35 (IDENTIFIER_ID -> IDENTIFIER_ARRAY .)
    NE_OP           reduce using rule 35 (IDENTIFIER_ID -> IDENTIFIER_ARRAY .)
    ,               reduce using rule 35 (IDENTIFIER_ID -> IDENTIFIER_ARRAY .)
    )               reduce using rule 35 (IDENTIFIER_ID -> IDENTIFIER_ARRAY .)


state 26

    (41) INC_DEC_OPRERATOR -> INC_OP .

    IDENTIFIER      reduce using rule 41 (INC_DEC_OPRERATOR -> INC_OP .)
    ;               reduce using rule 41 (INC_DEC_OPRERATOR -> INC_OP .)
    )               reduce using rule 41 (INC_DEC_OPRERATOR -> INC_OP .)


state 27

    (42) INC_DEC_OPRERATOR -> DEC_OP .

    IDENTIFIER      reduce using rule 42 (INC_DEC_OPRERATOR -> DEC_OP .)
    ;               reduce using rule 42 (INC_DEC_OPRERATOR -> DEC_OP .)
    )               reduce using rule 42 (INC_DEC_OPRERATOR -> DEC_OP .)


state 28

    (88) PRINT_AL -> PRINT .

    (               reduce using rule 88 (PRINT_AL -> PRINT .)


state 29

    (1) line -> Input line .

    $end            reduce using rule 1 (line -> Input line .)


state 30

    (2) line -> EXIT empty .

    $end            reduce using rule 2 (line -> EXIT empty .)


state 31

    (10) Declaration -> DeclarationTypeNumber IDENTIFIER_ALL . ;

    ;               shift and go to state 50


state 32

    (11) Declaration -> DeclarationTypeNumber ARRAY_MULTI_ASSIGN . ;

    ;               shift and go to state 51


state 33

    (32) IDENTIFIER_ALL -> IDENTIFIER_ASSIGN .

    ;               reduce using rule 32 (IDENTIFIER_ALL -> IDENTIFIER_ASSIGN .)
    ,               reduce using rule 32 (IDENTIFIER_ALL -> IDENTIFIER_ASSIGN .)
    )               reduce using rule 32 (IDENTIFIER_ALL -> IDENTIFIER_ASSIGN .)


state 34

    (33) IDENTIFIER_ALL -> IDENTIFIER_ARRAY .

    ;               reduce using rule 33 (IDENTIFIER_ALL -> IDENTIFIER_ARRAY .)
    ,               reduce using rule 33 (IDENTIFIER_ALL -> IDENTIFIER_ARRAY .)
    )               reduce using rule 33 (IDENTIFIER_ALL -> IDENTIFIER_ARRAY .)


state 35

    (34) IDENTIFIER_ALL -> IDENTIFIER .
    (19) ARRAY_MULTI_ASSIGN -> IDENTIFIER . [ ] = { MULTI_ASSIGN }
    (16) IDENTIFIER_ASSIGN -> IDENTIFIER . = OperationConstant
    (18) IDENTIFIER_ARRAY -> IDENTIFIER . [ ARRAY_SIZE ]

    ;               reduce using rule 34 (IDENTIFIER_ALL -> IDENTIFIER .)
    [               shift and go to state 39
    =               shift and go to state 52


state 36

    (52) Expression -> ARRAY_MULTI_ASSIGN empty . ;

    ;               shift and go to state 53


state 37

    (12) Declaration -> STRING IDENTIFIER . ;
    (17) STRING_ASSIGN -> IDENTIFIER . = DQ_MSG

    ;               shift and go to state 54
    =               shift and go to state 55


state 38

    (13) Declaration -> STRING STRING_ASSIGN . ;

    ;               shift and go to state 56


state 39
